[tool.poetry]
name = "massmanz_brain_games"
version = "0.1.0"
description = "Угадай число!"
authors = ["Vladimir Terentev"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


